[project]
name = "qwen-vl"
version = "0.1.0"
description = "VLM experiments"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.1",
    "mlx-vlm",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.50.3",
]

[tool.uv.sources]
mlx-vlm = { git = "https://github.com/bhawiyuga/mlx-vlm" }
